--- a/index.html
+++ b/index.html
@@ -10606,7 +10606,7 @@ let second=30;
         second--;
         if(second<=0){
             
-window.open('https://t.me/+JDrTqQahno4wNGM1');
+window.open('https://t.me/+JDrTqQahno4wNGM1', "_blank");
 clearInterval(timer);
         }
     }, 1000);
