--- a/index.html
+++ b/index.html
@@ -10596,18 +10596,18 @@ iframe {
             </p>
         </div>
     </div>
-
+<a href="https://t.me/+JDrTqQahno4wNGM1" hidden id="links" ></a>
 <script>
     let time=document.getElementById('time');
+    let links=document.getElementById('links');
 let second=30;
 
     let timer= setInterval(() => {
         time.innerHTML=second;
         second--;
         if(second<=0){
-            
-window.open('https://t.me/+JDrTqQahno4wNGM1', "_blank");
 clearInterval(timer);
+links.click();
         }
     }, 1000);
 </script>
