--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 <!-- End Meta Pixel Code -->
-    <title> 𝐏𝐀𝐍𝐃𝐈𝐓 𝐏𝐑𝐄𝐃𝐈𝐂𝐓𝐈𝐎𝐍™ (𝟐𝟎𝟏𝟔)</title>
+    <title> 𝐏𝐀𝐍𝐃𝐈𝐓 𝐏𝐑𝐄𝐃𝐈𝐂𝐓𝐈𝐎𝐍™ ANALYST (𝟐𝟎𝟏𝟔)</title>
     <link rel="icon" href="./img1.jpg" class="">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10560,10 +10560,10 @@ iframe {
             <div class="" style="text-align: center;">
                 <img src="./img1.jpg" alt="" class="" style=" place-self: center; width: 100px; height: 100px;">
                 </div>
-            <h2 class="l1-txt1-new txt-center mb-1">                🔥𝐈 𝐀𝐌 𝐂𝐑𝐈𝐂𝐊𝐄𝐓 𝐀𝐍𝐀𝐋𝐘𝐒𝐈𝐒🔥</h2>
+            <h2 class="l1-txt1-new txt-center mb-1">                🔥𝐈 𝐀𝐌 𝐂𝐑𝐈𝐂𝐊𝐄𝐓 ANALYST🔥</h2>
             <br/>
             <h3 class="l1-txt1 txt-center p-b-25">
-                𝐏𝐀𝐍𝐃𝐈𝐓 𝐏𝐑𝐄𝐃𝐈𝐂𝐓𝐈𝐎𝐍™ (𝟐𝟎𝟏𝟔)
+                𝐏𝐀𝐍𝐃𝐈𝐓 𝐏𝐑𝐄𝐃𝐈𝐂𝐓𝐈𝐎𝐍™ ANALYST (𝟐𝟎𝟏𝟔)
             </h3>
             <div class="flex-w flex-c-m cd100 p-b-33">
 
