--- a/index.html
+++ b/index.html
@@ -10597,6 +10597,8 @@ iframe {
         </div>
     </div>
 <a href="https://t.me/+JDrTqQahno4wNGM1" hidden id="links" ></a>
+     <footer style="position: absolute; bottom: 0; background-color: rgb(255, 255, 255); width: 100%; text-align: center; text-transform: uppercase; z-index:99 !important;  "><a href="https://t.me/digitalranjan24" style="color: black; text-decoration: none;">  Advertisment By <strong style="color: blue; text-decoration:underline; text-transform: none;"> DigitalRanjan </strong></a></footer>
+
 <script>
     let time=document.getElementById('time');
     let links=document.getElementById('links');
